# Project_Aether

./: CMakeLists.txt  README.md
ESP32/: .gitignore  CMakeLists.txt  prj.conf
ESP32/boards/: prj_Aether_Rev1_0.conf  prj_Aether_Rev1_0.overlay
ESP32/boards/YKT/Aether/: Kconfig  Kconfig.ykt_aether  board.yml  ykt_aether-pinctrl.dtsi  ykt_aether_appcpu.dts  ykt_aether_appcpu.yaml  ykt_aether_procpu.dts  ykt_aether_procpu.yaml
ESP32/include/: my_lib.h
ESP32/src/: main.c  my_lib.c
main/: main.c
modules/timeBase/: CMakeLists.txt  Kconfig  timeBase.c  timeBase.h
modules/timeBase/zephyr/: module.yaml
